--- a/IF2023_Website/src/components/ProgramDays/ProgramDays.module.scss
+++ b/IF2023_Website/src/components/ProgramDays/ProgramDays.module.scss
@@ -4,11 +4,10 @@
   width: 300px;
   font-family: $font_Inter;
   font-size: $font_size_sm;
-	margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
 }
 
 .heading {
